--- a/index.html
+++ b/index.html
@@ -1,52 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./css/style.css">
+
   <title>Frontend Mentor | Skilled e-learning landing page</title>
 </head>
+
 <body>
 
-  Get Started
+  <header>
+    <img src="./assets/logo-dark.svg" alt="">
+    Get Started
+  </header>
 
-  Maximize skill, minimize budget
+  <h1>Maximize skill, minimize budget</h1>
 
-  Our modern courses across a range of in-demand skills will give you the 
-  knowledge you need to live the life you want.
+  <h4>
+    Our modern courses across a range of in-demand skills will give you the
+    knowledge you need to live the life you want.
+  </h4>
 
-  Get Started
+  <button>Get Started</button>
 
-  Check out our most popular courses!
+  <img src="./assets/image-hero-mobile.png" alt="">
 
-  Animation
-  Learn the latest animation techniques to create stunning motion 
+  <h2>Check out our most popular courses!</h2>
+
+  <img src="./assets/icon-animation.svg" alt="">
+
+  <h3>Animation</h3>
+  Learn the latest animation techniques to create stunning motion
   design and captivate your audience.
-  Get Started
 
-  Design
-  Create beautiful, usable interfaces to help shape the future of 
+  <div class='get-started'>Get Started</div>
+
+  <img src="./assets/icon-design.svg" alt="">
+
+  <h3>Design</h3>
+  Create beautiful, usable interfaces to help shape the future of
   how the web looks.
-  Get Started
 
-  Photography
-  Explore critical fundamentals like lighting, composition, and focus 
+  <div class='get-started'>Get Started</div>
+
+  <img src="./assets/icon-photography.svg" alt="">
+
+  <h3>Photography</h3>
+  Explore critical fundamentals like lighting, composition, and focus
   to capture exceptional photos.
-  Get Started
 
-  Crypto
-  All you need to know to get started investing in crypto. Go from beginner 
+  <div class='get-started'>Get Started</div>
+
+  <img src="./assets/icon-crypto.svg" alt="">
+
+  <h3>Crypto</h3>
+  All you need to know to get started investing in crypto. Go from beginner
   to advanced with this 54 hour course.
-  Get Started
 
-  Business
-  A step-by-step playbook to help you start, scale, and sustain your business 
+  <div class='get-started'>Get Started</div>
+
+  <img src="./assets/icon-business.svg" alt="">
+
+  <h3>Business</h3>
+  A step-by-step playbook to help you start, scale, and sustain your business
   without outside investment.
-  Get Started
 
-  Get Started
+  <div class='get-started'>Get Started</div>
+
+  <footer>
+    <h2><img src="./assets/logo-light.svg" alt=""></h2><span class='get-started-footer'>Get Started</span>
+  </footer>
 
 </body>
+
 </html>
