--- a/index.html
+++ b/index.html
@@ -18,58 +18,59 @@
     Get Started
   </header>
 
-  <h1>Maximize skill, minimize budget</h1>
+  <main>
+    <h1 class='heading-xl'>Maximize skill, minimize budget</h1>
+    <h4>
+      Our modern courses across a range of in-demand skills will give you the
+      knowledge you need to live the life you want.
+    </h4>
 
-  <h4>
-    Our modern courses across a range of in-demand skills will give you the
-    knowledge you need to live the life you want.
-  </h4>
+    <button id='get-started-button'>Get Started</button>
 
-  <button>Get Started</button>
+    <img src="./assets/image-hero-mobile.png" alt="">
 
-  <img src="./assets/image-hero-mobile.png" alt="">
+    <h2>Check out our most popular courses!</h2>
 
-  <h2>Check out our most popular courses!</h2>
+    <img src="./assets/icon-animation.svg" alt="">
 
-  <img src="./assets/icon-animation.svg" alt="">
+    <h3>Animation</h3>
+    Learn the latest animation techniques to create stunning motion
+    design and captivate your audience.
 
-  <h3>Animation</h3>
-  Learn the latest animation techniques to create stunning motion
-  design and captivate your audience.
+    <div class='get-started'>Get Started</div>
 
-  <div class='get-started'>Get Started</div>
+    <img src="./assets/icon-design.svg" alt="">
 
-  <img src="./assets/icon-design.svg" alt="">
+    <h3>Design</h3>
+    Create beautiful, usable interfaces to help shape the future of how the web looks.
 
-  <h3>Design</h3>
-  Create beautiful, usable interfaces to help shape the future of
-  how the web looks.
+    <div class='get-started'>Get Started</div>
 
-  <div class='get-started'>Get Started</div>
+    <img src="./assets/icon-photography.svg" alt="">
 
-  <img src="./assets/icon-photography.svg" alt="">
+    <h3>Photography</h3>
+    Explore critical fundamentals like lighting, composition, and focus
+    to capture exceptional photos.
 
-  <h3>Photography</h3>
-  Explore critical fundamentals like lighting, composition, and focus
-  to capture exceptional photos.
+    <div class='get-started'>Get Started</div>
 
-  <div class='get-started'>Get Started</div>
+    <img src="./assets/icon-crypto.svg" alt="">
 
-  <img src="./assets/icon-crypto.svg" alt="">
+    <h3>Crypto</h3>
+    All you need to know to get started investing in crypto. Go from beginner
+    to advanced with this 54 hour course.
 
-  <h3>Crypto</h3>
-  All you need to know to get started investing in crypto. Go from beginner
-  to advanced with this 54 hour course.
+    <div class='get-started'>Get Started</div>
 
-  <div class='get-started'>Get Started</div>
+    <img src="./assets/icon-business.svg" alt="">
 
-  <img src="./assets/icon-business.svg" alt="">
+    <h3>Business</h3>
+    A step-by-step playbook to help you start, scale, and sustain your business
+    without outside investment.
 
-  <h3>Business</h3>
-  A step-by-step playbook to help you start, scale, and sustain your business
-  without outside investment.
+    <div class='get-started'>Get Started</div>
 
-  <div class='get-started'>Get Started</div>
+  </main>
 
   <footer>
     <h2><img src="./assets/logo-light.svg" alt=""></h2><span class='get-started-footer'>Get Started</span>
