--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <main>
     <h1 class='heading-xl'>Maximize skill, minimize budget</h1>
     <p>
+      <!-- BUG: Why won't this wrap? -->
       Our modern courses across a range of in-demand skills will give you the
       knowledge you need to live the life you want.
     </p>
@@ -34,46 +35,55 @@
     <img src="./assets/icon-animation.svg" alt="">
 
     <h3>Animation</h3>
-    Learn the latest animation techniques to create stunning motion
-    design and captivate your audience.
+    <p>
+      Learn the latest animation techniques to create stunning motion
+      design and captivate your audience.
+    </p>
 
     <div class='get-started'>Get Started</div>
 
     <img src="./assets/icon-design.svg" alt="">
 
     <h3>Design</h3>
-    Create beautiful, usable interfaces to help shape the future of how the web looks.
+    <p>Create beautiful, usable interfaces to help shape the future of how the web looks.</p>
 
     <div class='get-started'>Get Started</div>
 
     <img src="./assets/icon-photography.svg" alt="">
 
     <h3>Photography</h3>
-    Explore critical fundamentals like lighting, composition, and focus
-    to capture exceptional photos.
+    <p>
+      Explore critical fundamentals like lighting, composition, and focus
+      to capture exceptional photos.
+    </p>
 
     <div class='get-started'>Get Started</div>
 
     <img src="./assets/icon-crypto.svg" alt="">
 
     <h3>Crypto</h3>
-    All you need to know to get started investing in crypto. Go from beginner
-    to advanced with this 54 hour course.
+    <p>
+      All you need to know to get started investing in crypto. Go from beginner
+      to advanced with this 54 hour course.
+    </p>
 
     <div class='get-started'>Get Started</div>
 
     <img src="./assets/icon-business.svg" alt="">
 
     <h3>Business</h3>
-    A step-by-step playbook to help you start, scale, and sustain your business
-    without outside investment.
+    <p>
+      A step-by-step playbook to help you start, scale, and sustain your business
+      without outside investment.
+    </p>
 
     <div class='get-started'>Get Started</div>
 
   </main>
 
   <footer>
-    <h2><img src="./assets/logo-light.svg" alt=""></h2><span class='get-started-footer'>Get Started</span>
+    <p><img src="./assets/logo-light.svg" alt="Brand logo"></p>
+    <p class='get-started-footer'>Get started</p>
   </footer>
 
 </body>
