the bugs remain...

--- a/index.html
+++ b/index.html
@@ -15,20 +15,21 @@
 
   <header>
     <img src="./assets/logo-dark.svg" alt="">
-    Get Started
+    <p>Get Started</p>
   </header>
 
   <main>
     <h1 class='heading-xl'>Maximize skill, minimize budget</h1>
     <p>
-      <!-- BUG: Why won't this wrap? -->
       Our modern courses across a range of in-demand skills will give you the
       knowledge you need to live the life you want.
     </p>
 
     <button id='get-started-button'>Get Started</button>
 
-    <img src="./assets/image-hero-mobile.png" alt="">
+    <!-- TODO: Add alt text -->
+    <!-- BUG: This image is causing the content to overflow -->
+    <img src="./assets/image-hero-mobile.png" id="hero-img" alt="">
 
     <h2>Check out our most popular courses!</h2>
 
