--- a/index.html
+++ b/index.html
@@ -28,57 +28,57 @@
     <button id='get-started-button'>Get Started</button>
 
     <!-- TODO: Add alt text -->
-    <!-- BUG: This image is causing the content to overflow -->
-    <img src="./assets/image-hero-mobile.png" id="hero-img" alt="">
+    <img src="./assets/image-hero-mobile.png" id="hero-img" alt="Image of a women sipping a coffee">
 
     <h2>Check out our most popular courses!</h2>
 
-    <img src="./assets/icon-animation.svg" alt="">
+    <div class='card'>
+      <img src="./assets/icon-animation.svg" alt="Icon representing animation">
+      <h3>Animation</h3>
+      <p>
+        Learn the latest animation techniques to create stunning motion
+        design and captivate your audience.
+      </p>
+      <div class='get-started'>Get Started</div>
+    </div>
 
-    <h3>Animation</h3>
-    <p>
-      Learn the latest animation techniques to create stunning motion
-      design and captivate your audience.
-    </p>
 
-    <div class='get-started'>Get Started</div>
+    <div class='card'>
+      <img src="./assets/icon-design.svg" alt="">
+      <h3>Design</h3>
+      <p>Create beautiful, usable interfaces to help shape the future of how the web looks.</p>
+      <div class='get-started'>Get Started</div>
+    </div>
 
-    <img src="./assets/icon-design.svg" alt="">
+    <div class='card'>
+      <img src="./assets/icon-photography.svg" alt="">
+      <h3>Photography</h3>
+      <p>
+        Explore critical fundamentals like lighting, composition, and focus
+        to capture exceptional photos.
+      </p>
+      <div class='get-started'>Get Started</div>
+    </div>
 
-    <h3>Design</h3>
-    <p>Create beautiful, usable interfaces to help shape the future of how the web looks.</p>
+    <div class='card'>
+      <img src="./assets/icon-crypto.svg" alt="">
+      <h3>Crypto</h3>
+      <p>
+        All you need to know to get started investing in crypto. Go from beginner
+        to advanced with this 54 hour course.
+      </p>
+      <div class='get-started'>Get Started</div>
+    </div>
 
-    <div class='get-started'>Get Started</div>
-
-    <img src="./assets/icon-photography.svg" alt="">
-
-    <h3>Photography</h3>
-    <p>
-      Explore critical fundamentals like lighting, composition, and focus
-      to capture exceptional photos.
-    </p>
-
-    <div class='get-started'>Get Started</div>
-
-    <img src="./assets/icon-crypto.svg" alt="">
-
-    <h3>Crypto</h3>
-    <p>
-      All you need to know to get started investing in crypto. Go from beginner
-      to advanced with this 54 hour course.
-    </p>
-
-    <div class='get-started'>Get Started</div>
-
-    <img src="./assets/icon-business.svg" alt="">
-
-    <h3>Business</h3>
-    <p>
-      A step-by-step playbook to help you start, scale, and sustain your business
-      without outside investment.
-    </p>
-
-    <div class='get-started'>Get Started</div>
+    <div class='card'>
+      <img src="./assets/icon-business.svg" alt="">
+      <h3>Business</h3>
+      <p>
+        A step-by-step playbook to help you start, scale, and sustain your business
+        without outside investment.
+      </p>
+      <div class='get-started'>Get Started</div>
+    </div>
 
   </main>
 
